# OpenU-C-Lab

./: LICENSE  README.md
11/my_add/: Makefile  my_add  my_add.c  my_add.h
11/my_suffix/: Makefile  a.txt  b.txt  c.txt  d.txt  my_suffix  my_suffix.c  my_suffix.h
12/: Makefile  a.txt  partialSums  partialSums.c  partialSums.h
22/: CMakeLists.txt  Makefile  a  b  myset  myset.c  parser.c  set.c  set.h
23/hash/: Makefile  b  c  hash  hash.c  hash.h
